--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="hero">
         <nav>
-            <img src="img/vcs.png" alt="">
+            <img src="vcs.png" alt="">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">portfolio</a></li>
@@ -32,8 +32,8 @@
             <a href="#">DOWNLOAd CV</a>
         </div>
         <div class="images">
-            <img src="img/oo.png" class="shp">
-            <img src="img/vicky.png" class="shp1">
+            <img src="oo.png" class="shp">
+            <img src="vicky.png" class="shp1">
         </div>
     </div>
     
